--- a/src/components/cards/CardDetail.css
+++ b/src/components/cards/CardDetail.css
@@ -2,6 +2,8 @@
   display: flex;
   gap: 30px;
   padding: 40px;
+      background-image: url('../../assets/img/fondo2.avif');
+
   background: linear-gradient(135deg, #750d0d 0%, #ea130c 100%);
   border-radius: 15px;
   max-width: 900px;
