--- a/src/components/Navbar/NavBar.css
+++ b/src/components/Navbar/NavBar.css
@@ -1,3 +1,16 @@
+.nav-container {
+  position: fixed;       
+  top: 0;                
+  left: 0;
+  right: 0;
+  width: 100%;
+  z-index: 1000;         
+  background-color: #000; 
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+}
+
+
+
 .nav-bar {
   background-color: #333;
   overflow: hidden;
