--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
 }
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f436;
+    background-color: #010101f8;
+    padding-top: 80px;
 }
 a {
     text-decoration: none;
